# CandyCard

back-end/: models.py  pyproject.toml
back-end/candycard/: app.py  auth.py  config.py  db.py  errors.py  middleware.py  models.py
back-end/candycard/leitner/: __init__.py  card.py  deck.py
front-end/: .prettierrc  package.json  pnpm-lock.yaml
front-end/src/app/(main)/login/: page.tsx
front-end/src/app/(main)/signup/: page.tsx
